change template static path

--- a/templates/agent.html
+++ b/templates/agent.html
@@ -4,17 +4,17 @@
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<title>选择 代理 来修改 | Django 站点管理员</title>
 	{% load static %}
-	<link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">  
-	<link rel="stylesheet" type="text/css" href="{% static 'css/changelists.css' %}">
-	<script type="text/javascript" src="{% static 'js/a.js' %}"></script>
-	<script type="text/javascript" src="{% static 'js/core.js' %}"></script>
-	<script type="text/javascript" src="{% static 'js/jquery_002.js' %}"></script>
-	<script type="text/javascript" src="{% static 'js/jquery.js' %}"></script>
-	<script type="text/javascript" src="{% static 'js/RelatedObjectLookups.js' %}"></script>
-	<script type="text/javascript" src="{% static 'js/actions.js' %}"></script>
-	<script type="text/javascript" src="{% static 'js/urlify.js' %}"></script>
-	<script type="text/javascript" src="{% static 'js/prepopulate.js' %}"></script>
-	<script type="text/javascript" src="{% static 'js/xregexp.js' %}"></script>
+	<link rel="stylesheet" type="text/css" href="{% static 'admin/css/base.css' %}">  
+	<link rel="stylesheet" type="text/css" href="{% static 'admin/css/changelists.css' %}">
+	<script type="text/javascript" src="{% static 'admin/js/a.js' %}"></script>
+	<script type="text/javascript" src="{% static 'admin/js/core.js' %}"></script>
+	<script type="text/javascript" src="{% static 'admin/js/jquery_002.js' %}"></script>
+	<script type="text/javascript" src="{% static 'admin/js/jquery.js' %}"></script>
+	<script type="text/javascript" src="{% static 'admin/js/RelatedObjectLookups.js' %}"></script>
+	<script type="text/javascript" src="{% static 'admin/js/actions.js' %}"></script>
+	<script type="text/javascript" src="{% static 'admin/js/urlify.js' %}"></script>
+	<script type="text/javascript" src="{% static 'admin/js/prepopulate.js' %}"></script>
+	<script type="text/javascript" src="{% static 'admin/js/xregexp.js' %}"></script>
 
 	<meta name="robots" content="NONE,NOARCHIVE">
 </head>
@@ -75,7 +75,7 @@
 
 		<div id="toolbar"><form id="changelist-search" method="get">
 		<div><!-- DIV needed for valid HTML -->
-		<label for="searchbar"><img src="{% static 'img/search.svg' %}" alt="Search"></label>
+		<label for="searchbar"><img src="{% static 'admin/img/search.svg' %}" alt="Search"></label>
 		<input size="40" name="q" id="searchbar" autofocus="" type="text">
 		<input value="搜索" type="submit">
 		</div>
