--- a/templates/agent_change.html
+++ b/templates/agent_change.html
@@ -3,19 +3,19 @@
 {% load static %}
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <title>增加 代理 | Django 站点管理员</title>
-<link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
-<link rel="stylesheet" type="text/css" href="{% static 'css/forms.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'admin/css/base.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'admin/css/forms.css' %}">
 
 
-<script type="text/javascript" src="{% static 'js/a.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/core.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/jquery_002.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/jquery.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/RelatedObjectLookups.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/actions.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/urlify.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/prepopulate.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/xregexp.js' %}"></script>
+<script type="text/javascript" src="{% static 'admin/js/a.js' %}"></script>
+<script type="text/javascript" src="{% static 'admin/js/core.js' %}"></script>
+<script type="text/javascript" src="{% static 'admin/js/jquery_002.js' %}"></script>
+<script type="text/javascript" src="{% static 'admin/js/jquery.js' %}"></script>
+<script type="text/javascript" src="{% static 'admin/js/RelatedObjectLookups.js' %}"></script>
+<script type="text/javascript" src="{% static 'admin/js/actions.js' %}"></script>
+<script type="text/javascript" src="{% static 'admin/js/urlify.js' %}"></script>
+<script type="text/javascript" src="{% static 'admin/js/prepopulate.js' %}"></script>
+<script type="text/javascript" src="{% static 'admin/js/xregexp.js' %}"></script>
 
 <meta name="robots" content="NONE,NOARCHIVE">
 </head>
@@ -253,13 +253,13 @@
 
 
 
-    <script type="text/javascript" id="django-admin-form-add-constants" src="{% static 'js/change_form.js' %}" data-model-name="superior">
+    <script type="text/javascript" id="django-admin-form-add-constants" src="{% static 'admin/js/change_form.js' %}" data-model-name="superior">
     </script>
 
 
 
 
-<script type="text/javascript" id="django-admin-prepopulated-fields-constants" src="{% static 'js/prepopulate_init.js' %}" data-prepopulated-fields="[]">
+<script type="text/javascript" id="django-admin-prepopulated-fields-constants" src="{% static 'admin/js/prepopulate_init.js' %}" data-prepopulated-fields="[]">
 </script>
 
 
